# ledger-bot

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README
.github/workflows/: branches.yaml  main.yaml
chart/: Chart.yaml
chart/templates/: deployment.yaml
src/: bot.rs  cache.rs  db.rs  error.rs  main.rs  sale.rs
src/bot/: add.rs  del.rs  lend.rs  list.rs
src/db/: cache.rs  fame.rs  item.rs  market.rs  sale.rs
src/translations/: br.rs  en.rs  str.rs
