[package]
authors = [
    "Andrei Sousa <sousandrei@gmail.com>",
    "Yurick Hauschild <ledger@yurick.dev>",
]
edition = "2018"
name = "ledger"
version = "0.1.0"


[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4"
reqwest = { version = "0.11.2", features = ["json", "blocking"] }
teloxide = { version = "0.4", features = ['full'] }
tokio = { version = "1.4", features = ["rt-multi-thread", "macros"] }
