[package]
authors = [
    "Andrei Sousa <sousandrei@gmail.com>",
    "Yurick Hauschild <ledger@yurick.dev>",
]
edition = "2018"
name = "ledger"
version = "0.1.0"


[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.8"
mongodb = "2.0.0-alpha.1"
pretty_env_logger = "0.4"
reqwest = { version = "0.11.3", features = ["json"] }
serde = "1.0.125"
serde_json = "1.0.64"
teloxide = { version = "0.4", features = ['full'] }
tokio = { version = "1.4", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
