[package]
authors = [
    "Andrei Sousa <sousandrei@gmail.com>",
    "Yurick Hauschild <ledger@yurick.dev>",
]
edition = "2018"
name = "ledger"
version = "0.1.0"


[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.14"
mongodb = "2.0.0-alpha.2"
num-format = "0.4.0"
regex = "1.4.5"
reqwest = { version = "0.11.3", features = ["json"] }
serde = "1.0.125"
serde_json = "1.0.64"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
tokio = { version = "1.4", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
